--- a/services.html
+++ b/services.html
@@ -7,8 +7,8 @@
 	<meta name="keywords" content="выведение, запой, на дому, Med24.online, выезд, круглосуточно, недорого, анонимно, нарколог">
 	<meta name="description" content="Вывод из запоя на дому в вашем городе. Капельница. Гарантируем анонимность и результат. Делаем предварительную диагностику: ЭКГ, глюкозу и др.">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">
+	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" media="print" onload="this.media='all'">
 	<link rel="stylesheet" href="css/style-main.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,16 +87,16 @@
             <div class="article__main-icon"><img src="img/icons/computer.svg" alt=""></div>
             <div class="article__body  _spollers _one">
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">О med24.online</span><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><a href="articles.html" class="article__title-list">О med24.online</a><span class="article__icon"></span></h2>
                 <ul class="article__list">
-                  <li><a href="about.html" class="article__link">О компании Семейный Доктор</a></li>
-                  <li><a href="#" class="article__link">IT-Безопасность</a></li>
+                  <li><a href="about.html" class="article__link">О платформе med24.online</a></li>
                   <li><a href="#" class="article__link">Связаться med24.online</a></li>
-                  <li><a href="#" class="article__link article__link_all">Посмотреть все</a></li>
+                  <li><a href="#" class="article__link">IT-Безопасность</a></li>
+                  <li><a href="#" class="article__link article__link_all">О компании Семейный Доктор</a></li>
                 </ul>
               </div>
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">Новости</span><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">Новости</a><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="#" class="article__link">Блог</a></li>
                 </ul>
