--- a/articles.html
+++ b/articles.html
@@ -7,8 +7,8 @@
 	<meta name="keywords" content="выведение, запой, на дому, Med24.online, выезд, круглосуточно, недорого, анонимно, нарколог">
 	<meta name="description" content="Вывод из запоя на дому в вашем городе. Капельница. Гарантируем анонимность и результат. Делаем предварительную диагностику: ЭКГ, глюкозу и др.">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">
+	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" media="print" onload="this.media='all'">
 	<link rel="stylesheet" href="css/style-main.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,7 +69,8 @@
           <div class="_container">
             <ul class="breadcrumbs__list">
               <li><a href="main.html" class="breadcrumbs__item">Главная</a></li>
-              <li><a href="articles.html" class="breadcrumbs__item breadcrumbs__item_active">Статьи</a></li>
+              <li><a href="services.html" class="breadcrumbs__item">Сервис</a></li>
+              <li><a href="articles.html" class="breadcrumbs__item breadcrumbs__item_active">О портале</a></li>
             </ul>
           </div>
         </div>
@@ -77,7 +78,7 @@
 
         <section class="article-main">
           <div class="_container">
-            <h1 class="article-main__title">О <span>med24<img src="img/icons/heart.svg" alt="">online</span></h1>
+            <h1 class="article-main__title">О портале <span>med24<img src="img/icons/heart.svg" alt="">online</span></h1>
             <p class="article-main__text">Med24.online помогает людям избавиться от алкозависимости и наркозависимости, консультирует по вопросам лечения. Оказывает психологическую помощь родственникам зависимых.</p>
           </div>
         </section>
@@ -111,7 +112,7 @@
               <div class="article__item">
                 <h2 class="_spoller" data-max="767.98"><span class="article__title-list">IT-безопасность</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
-                  <li><a href="#" class="article__link">Политика конфиденциальности</a></li>
+                  <li><a href="about.html" class="article__link">Политика конфиденциальности</a></li>
                   <li><a href="#" class="article__link">Пользовательское соглашение</a></li>
                   <li><a href="#" class="article__link">Политика в отношении файлов Cookie</a></li>
                 </ul>
