--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 	<meta name="keywords" content="выведение, запой, на дому, Med24.online, выезд, круглосуточно, недорого, анонимно, нарколог">
 	<meta name="description" content="Вывод из запоя на дому в вашем городе. Капельница. Гарантируем анонимность и результат. Делаем предварительную диагностику: ЭКГ, глюкозу и др.">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=PT+Sans:wght@400;700&display=swap&subset=cyrillic-ext" media="print" onload="this.media='all'">
+	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" media="print" onload="this.media='all'">
 	<link rel="stylesheet" href="css/style-main.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
