--- a/about.html
+++ b/about.html
@@ -4,11 +4,23 @@
 	<title>Частная наркологическая клиника в вашем городе</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<meta name="keywords" content="выведение, запой, на дому, Med24.online, выезд, круглосуточно, недорого, анонимно, нарколог">
-	<meta name="description" content="Вывод из запоя на дому в вашем городе. Капельница. Гарантируем анонимность и результат. Делаем предварительную диагностику: ЭКГ, глюкозу и др.">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" media="print" onload="this.media='all'">
+	<style>
+		@font-face {
+			font-family: "Fira Sans";
+			font-display: swap;
+			src: url("../fonts/FiraSans-Regular.woff") format("woff"), url("../fonts/FiraSans-Regular.woff2") format("woff2");
+			font-weight: 400;
+			font-style: normal;
+		}
+
+		@font-face {
+			font-family: "Fira Sans";
+			font-display: swap;
+			src: url("../fonts/FiraSans-Bold.woff") format("woff"), url("../fonts/FiraSans-Bold.woff2") format("woff2");
+			font-weight: 700;
+			font-style: normal;
+		}
+	</style>
 	<link rel="stylesheet" href="css/style-main.min.css">
 	<link rel="shortcut icon" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -130,6 +142,10 @@
 
               <div class="about__column about__column_middle" data-index="3" data-menu="1">
                 <h1 class="about__title">ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</h1>
+                <div class="about__subtitle">
+                  <span>г. Воронеж</span>
+                  <span>«21» января 2021 г.</span>
+                </div>
                 <p class="about__text">Настоящая Политика конфиденциальности персональных данных (далее – Политика конфиденциальности) действует в отношении всей информации, которую клиника <span>«Семейный Доктор»</span>,  расположенная по адресу: 394026 Воронежская область, г. Воронеж, проспект Труда 65, офис 48,  доменное имя <a href="https://www.med24.online/">https://www.med24.online/</a>, может получить о Пользователе во время использования сайта Клиники, программ и продуктов клиники <span>«Семейный Доктор»</span>.</p>
                 <div class="about__article article1">
                   <h2 class="about__title-article">ОБЩИЕ ПОЛОЖЕНИЯ</h2>
