--- a/services.html
+++ b/services.html
@@ -104,7 +104,8 @@
                   <li><a href="about.html" class="article__link">О платформе med24.online</a></li>
                   <li><a href="#" class="article__link">Связаться med24.online</a></li>
                   <li><a href="#" class="article__link">IT-Безопасность</a></li>
-                  <li><a href="#" class="article__link article__link_all">О компании Семейный Доктор</a></li>
+                  <li><a href="#" class="article__link">О компании Семейный Доктор</a></li>
+                  <li><a href="#" class="article__link article__link_all">Посмотреть все</a></li>
                 </ul>
               </div>
               <div class="article__item">
