--- a/services.html
+++ b/services.html
@@ -99,7 +99,7 @@
             <div class="article__main-icon"><img src="img/icons/computer.svg" alt=""></div>
             <div class="article__body  _spollers _one">
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="articles.html" class="article__title-list">О med24.online</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">О med24.online</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="about.html" class="article__link">О платформе med24.online</a></li>
                   <li><a href="#" class="article__link">Связаться med24.online</a></li>
@@ -109,7 +109,7 @@
                 </ul>
               </div>
               <div class="article__item">
-                <h2 class="_spoller" data-max="767.98"><a href="#" class="article__title-list">Новости</a><span class="article__icon"></span></h2>
+                <h2 class="_spoller" data-max="767.98"><span class="article__title-list">Новости</span><span class="article__icon"></span></h2>
                 <ul class="article__list">
                   <li><a href="#" class="article__link">Блог</a></li>
                 </ul>
