--- a/services.html
+++ b/services.html
@@ -115,8 +115,8 @@
                 </ul>
               </div>
               <div class="article__item">
-                <h2><a href="#" class="article__title-list">Информационный раздел</a><span class="article__icon"></span></h2>
-                <h2><a href="#" class="article__title-list">Права и законы в медицине</a><span class="article__icon"></span></h2>
+                <h2><a href="#" class="article__title-list article__title-list_link">Информационный раздел</a><span class="article__icon"></span></h2>
+                <h2><a href="#" class="article__title-list article__title-list_link">Права и законы в медицине</a><span class="article__icon"></span></h2>
               </div>
             </div>
           </div>
