--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		@font-face {
 			font-family: "Fira Sans";
 			font-display: swap;
-			src: url("../fonts/FiraSans-Regular.woff") format("woff"), url("../fonts/FiraSans-Regular.woff2") format("woff2");
+			src: url("fonts/FiraSans-Regular.woff2") format("woff2");
 			font-weight: 400;
 			font-style: normal;
 		}
@@ -16,13 +16,13 @@
 		@font-face {
 			font-family: "Fira Sans";
 			font-display: swap;
-			src: url("../fonts/FiraSans-Bold.woff") format("woff"), url("../fonts/FiraSans-Bold.woff2") format("woff2");
+			src: url("fonts/FiraSans-Bold.woff2") format("woff2");
 			font-weight: 700;
 			font-style: normal;
 		}
 	</style>
 	<link rel="stylesheet" href="css/style-main.min.css">
-	<link rel="shortcut icon" href="img/favicon.png">
+	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
