--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		@font-face {
 			font-family: "Fira Sans";
 			font-display: swap;
-			src: url("../fonts/FiraSans-Regular.woff") format("woff"), url("../fonts/FiraSans-Regular.woff2") format("woff2");
+			src: url("fonts/FiraSans-Regular.woff2") format("woff2");
 			font-weight: 400;
 			font-style: normal;
 		}
@@ -16,14 +16,13 @@
 		@font-face {
 			font-family: "Fira Sans";
 			font-display: swap;
-			src: url("../fonts/FiraSans-Bold.woff") format("woff"), url("../fonts/FiraSans-Bold.woff2") format("woff2");
+			src: url("fonts/FiraSans-Bold.woff2") format("woff2");
 			font-weight: 700;
 			font-style: normal;
 		}
 	</style>
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="preload" href="img/top-screen-mobile-small.jpg" as="image" />
-	<link rel="shortcut icon" href="img/favicon.png">
+	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -78,13 +77,6 @@
 			<main class="page">
 				<!--preview start-->
 				<section class="preview">
-					<div class="preview__image">
-						<picture>
-							<source data-srcset="img/top-screen-bg.jpg" srcset="" media="(min-width: 1023.98px)">
-							<source data-srcset="img/top-screen-mobile.jpg" srcset="" media="(min-width: 479.98px)">
-							<img data-src="img/top-screen-mobile-small.jpg" src="" alt="">
-						</picture>
-					</div>
 					<div class="_container">
 						<h1 class="preview__title">Вывод из запоя <br><span class="preview__title_red">на дому</span> {вашем городе}</h1>
 						<p class="preview__text">Будем в течение 1 часа!</p>
